# badgecollector

./: .gitignore  .impeccable.md  CLAUDE.md  README.md  hugo.yaml
.github/ISSUE_TEMPLATE/: award-badge.yml  config.yml  define-badge.yml  register-client.yml
.github/scripts/: apply-award.mjs  award-badge.mjs  define-badge.mjs  dispatch-award.mjs  parse-issue.mjs  register-client.mjs
.github/workflows/: award-badge.yml  define-badge.yml  deploy-pages.yml  deploy-worker.yml  dispatch-award.yml  publish-npm.yml  publish-pypi.yml  register-client.yml
content/: _index.md
content/badges/: _index.md  early-adopter.md  first-contribution.md  founder.md  ohm-crusader-caravaneer.md  ohm-crusader-ennobled.md  ohm-crusader-first-blood.md  ohm-crusader-founder.md  ohm-crusader-loremaster.md  ohm-crusader-marchwarden.md  ohm-crusader-master-builder.md  ohm-crusader-plague-survivor.md  ohm-crusader-siegebreaker.md  openfantasymap-cartographer.md  openfantasymap-chronicler.md  openfantasymap-worldbuilder.md  openhistorymap-archivist.md  openhistorymap-cartographer.md  openhistorymap-contributor.md
content/clients/: _index.md
content/m/: _index.md
data/clients/: acme-corp.yaml  demo-client.yaml  example-app.yaml  justplay.yaml  manual.yaml  ohm-crusader.yaml  ontorag.yaml  openfantasymap.yaml  openhistorymap.yaml
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html
layouts/badges/: list.html  single.html
layouts/clients/: list.html
layouts/m/: single.embed.html  single.html
sdk/js/: README.md  index.mjs  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/badgecollector/: __init__.py
static/: CNAME
static/css/: style.css
tools/: issue-client.mjs
users/: manual.csv
worker/: package.json  wrangler.toml
worker/src/: index.js
