[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "badgecollector"
version = "0.1.0"
description = "Apify badge assignment for badgecollector.org via GitHub repository_dispatch or the relay Worker."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Marco Montanari" }]
keywords = ["badges", "github", "open-badges", "certifications", "achievements"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://badgecollector.org"
Source = "https://github.com/sirmmo/badgecollector"
Issues = "https://github.com/sirmmo/badgecollector/issues"

[tool.hatch.build.targets.wheel]
packages = ["badgecollector"]
